# banck-event-sourcing

./: Cargo.toml  LICENSE  README.md  store.txt
src/: main.rs
src/application/: mod.rs
src/application/storage/: mod.rs
src/application/use_cases/: mod.rs
src/domain/: event.rs  event_aggregate.rs  mod.rs
src/domain/tests/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/input/cli/: mod.rs  setup.rs  signals.rs
src/infrastructure/input/http/: mod.rs  structs.rs
src/infrastructure/raw_event/: mod.rs
src/infrastructure/raw_event/tests/: mod.rs
src/infrastructure/storages/: file_storage.rs  mod.rs
