[package]
name = "event-sourcing"
version = "0.1.0"
edition = "2024"

[features]
cli = []

[dependencies]
axum = "0.8.3"
clap = {version = "4.5.28", features = ["derive"]}
hyper = "1.6.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full"]}
